--- a/index.html
+++ b/index.html
@@ -3,43 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>정사면체의 정의</title>
+    <title>Three.js 정다면체 로드 예시</title>
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Three.js 캔버스를 가운데 배치하기 위한 스타일 */
+        #three-container {
+            width: 300px;
+            height: 300px;
+            margin: 0 auto;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+        }
+    </style>
 </head>
 <body>
 
     <main class="container">
         <section class="scene">
-            <div class="tetrahedron">
-                <div class="face face-1"></div>
-                <div class="face face-2"></div>
-                <div class="face face-3"></div>
-                <div class="face face-4"></div>
-            </div>
+            <div id="three-container"></div>
         </section>
 
         <section class="description">
-            <h1>정사면체 <span class="sub">Regular Tetrahedron</span></h1>
-            <p class="intro">가장 단순하지만 완벽한 대칭을 이루는 다면체입니다</p>
+            <h1>정다면체 3D <span class="sub">Three.js Module Load</span></h1>
+            <p class="intro">외부 3D 라이브러리를 이용하여 정다면체 모델을 불러왔습니다</p>
             
             <ul class="reason-list">
                 <li>
-                    <strong>면 (Faces)</strong>
-                    <span>4개의 면이 모두 합동인 정삼각형입니다</span>
+                    <strong>장점 1</strong>
+                    <span>복잡한 3D 모델링을 단순한 함수 호출로 구현합니다</span>
                 </li>
                 <li>
-                    <strong>꼭짓점 (Vertices)</strong>
-                    <span>어느 꼭짓점에서 보아도 3개의 면이 만납니다</span>
-                </li>
-                <li>
-                    <strong>모서리 (Edges)</strong>
-                    <span>6개의 모서리 길이가 모두 동일합니다</span>
+                    <strong>장점 2</strong>
+                    <span>카메라, 조명, 텍스처 등 다양한 3D 효과를 쉽게 적용 가능합니다</span>
                 </li>
             </ul>
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
